syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.radishframework.radish.registry.core";
option java_outer_classname = "RegistryProto";

package com.radishframework.radish.registry.core;

// 服务注册中心
service Registry {
    // 注册一个服务
    rpc Register (RegisterRequest) returns (RegisterResponse) { }
}

/* 服务注册信息 */
message RegisterRequest {
    string desc_name = 1;
    InstanceInfo instance_info = 2;
}

message RegisterResponse {
    bool success = 1;
}

message InstanceInfo {
    string ip = 1;
    int32 port = 2;
    int32 operation_port = 3;
    string hostname = 4;
    string app_name = 5;
    map<string, string> metadata = 6;
}
